# frostgate-core

./: .dockerignore  .gitignore  .markdownlint.json  CONTRACT.md  Dockerfile  Makefile  README.md  README_MVP.md  auth-settings.patch  contract.md  docker-compose.yml  frostgate_context_snapshot.txt  frostgate_decisions.db-shm  frostgate_decisions.db-wal  frostgate_tree.txt  frostgate_tree_everything.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
agent/: Dockerfile  README.md  agent_main.py
api/: auth.py  auth_scopes.py  config.py  db.py  db_models.py  decision_diff.py  decisions.py  defend.py  dev_events.py  explain_brief.py  feed.py  forensics.py  governance.py  ingest.py  ingest_schemas.py  logging_config.py  main.py  metrics.py  mission_envelope.py  models.py  persist.py  rate_limit.py  ratelimit.py  ring_router.py  roe_engine.py  schemas.py  schemas_doctrine.py  schemas_impact.py  stats.py  telemetry.py  token_useage.py  ui.py  ui_feed.py
backend/: README.md
engine/: __init__.py  evaluate.py  history.py  persona.py  roe.py  rules.py  setting.py  tied.py  types.py
frostgate_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
jobs/: __init__.py
scripts/: apply_decisions_indexes.py  audit_changes.sh  audit_make_targets.py  build.sh  common.sh  conftest.py  contract_lint.py  create_api_key.py  demo.sh  demo_run_local.sh  deploy_dev.sh  deploy_prod.sh  dev-api-with-db.sh  dev-api.sh  dev-deploy-core.sh  dev-supervisor.sh  dev_env.sh  dev_env_local.sh  diag_core_crash.sh  env.sh  fg_add_decision_diff.sh  (+128 more)
(+74 files in other folders)
